crates/vigil-core/src/snapshots/vigil_core__tests__append.snap
---
source: crates/vigil-core/src/tests.rs
expression: "db.append(\"foo/bar\",\nvec![Event { event_type: \"user-created\".to_string(), ..Default::default() }])"
---
Ok: ~
