crates/vigil-core/src/snapshots/vigil_core__tests__illegal_subject.snap
---
source: crates/vigil-core/src/tests.rs
expression: "db.append(\"/path/to/file\",\nvec![Event { event_type: \"user-created\".to_string(), ..Default::default() }])"
---
Err: IllegalSubject
