crates/vigil-core/src/snapshots/vigil_core__tests__query_agg_distinct.snap
---
source: crates/vigil-core/src/tests.rs
expression: "db.run_query(include_str!(\"./resources/query_agg_distinct.eql\")).unwrap().collect::<EvalResult<Vec<_>>>()"
---
Ok:
  - Record:
      hasMultiple:
        Bool: true
  - Record:
      hasMultiple:
        Bool: false
