crates/vigil-core/src/snapshots/vigil_core__tests__query_agg_top.snap
---
source: crates/vigil-core/src/tests.rs
expression: "db.run_query(include_str!(\"./resources/query_agg_top.eql\")).unwrap().collect::<EvalResult<Vec<_>>>()"
---
Ok:
  - Record:
      avgSalary:
        Number: 97666.66666666667
      department:
        String: engineering
      employeeCount:
        Number: 3
  - Record:
      avgSalary:
        Number: 78500
      department:
        String: sales
      employeeCount:
        Number: 2
