crates/vigil-core/src/snapshots/vigil_core__tests__query_order_by.snap
---
source: crates/vigil-core/src/tests.rs
expression: "db.run_query(&options, &query).collect::<EvalResult<Vec<_>>>()"
---
Ok:
  - Record:
      department:
        String: marketing
      id:
        Number: 6
      salary:
        Number: 70000
  - Record:
      department:
        String: sales
      id:
        Number: 4
      salary:
        Number: 75000
  - Record:
      department:
        String: sales
      id:
        Number: 5
      salary:
        Number: 82000
  - Record:
      department:
        String: engineering
      id:
        Number: 3
      salary:
        Number: 88000
  - Record:
      department:
        String: engineering
      id:
        Number: 1
      salary:
        Number: 95000
  - Record:
      department:
        String: engineering
      id:
        Number: 2
      salary:
        Number: 110000
